changed color in theme v1 re

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -769,7 +769,7 @@ body {
 }
 
 .next_billion {
-  background-color: #665CD7;
+  background-color: #334AC0;
   text-align: center;
   position: relative;
 }
