--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,7 +7,9 @@ $primary-color: #334AC0;
 // $primary-color: #665CD7;
 
 // background colors
-$tertiary-background-color: #665CD7;
+// v1
+$tertiary-background-color: #334AC0;
+
 $primary-background-color: #ffffff;
 $secondary-background-color: rgba(51, 74, 192, 0.03);
 $darck-background-color: rgba(192, 152, 51, 0.05);
