--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ p{
  }
   .glyphicon{
     color: #a2a0a0;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: unset;
   }
   
@@ -301,12 +301,20 @@ p{
     }
  .mobile_arrow .left{
     position: absolute;
-    top: 320px;
+    top: 390px;
+    /* background-color: aquamarine; */
+    padding: 5px 7px;
+    border-radius: 50px;
+    right: 96px;
+
   }
   .mobile_arrow .right {
     position: absolute;
-    top: 320px;
-    right: 15px;
+    top: 390px;
+    right: 30px;
+    /* background-color: aquamarine; */
+    padding: 5px 7px;
+    border-radius: 50px;
   }
   .mobile_arrow{
     display: block;
