changed color in theme v3 backcard

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -769,7 +769,7 @@ body {
 }
 
 .next_billion {
-  background-color: #665CD7;
+  background-color: #242438;
   text-align: center;
   position: relative;
 }
@@ -821,7 +821,7 @@ body {
   padding: 18px 30px;
   background-color: #ffffff;
   font-size: 1rem;
-  color: #665CD7;
+  color: #242438;
   border: none;
   font-weight: 700;
   border-radius: 5px;
