--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -29,7 +29,7 @@ $color-black: #000000;
 // v1
 // $card-background-color: #91FAFF;
 // v2
-// $card-background-color: #91FAFF;
+// $card-background-color: #A0FDDC;
 // v3
 $card-background-color: #FFE593;
 
@@ -385,13 +385,14 @@ body{
             border-radius: 9px;
             // background-color: $card-background-color;
             // box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
-            height: 366px;
+            height: 404px;
             .card--head{
                 margin-top: 16px;
                 font-weight: bold;
                 color: $text-primary-color;
             }
             .card--text{
+                margin-bottom: 33px;
                 margin-top: 10%;
                 // margin-bottom: 30%;
                 font-size: 1.13rem;
@@ -400,19 +401,28 @@ body{
                 color: $text-subtext-color;
             }
             .btnn{
-                color: black;
-                padding:0px;
+                background-color: $color-black;
+                border-radius: 4px;
+                color: $color-white;
+                font-size: 14px;
+                padding: 12px 24px;
+
+                // color: black;
+                // padding:0px;
                 font-weight: 700;
                 outline:none;
                 text-decoration: none;
-                padding: 10px;
+                border: 1.5px solid $color-black;
+                // padding: 10px;
                 &:hover {
                     outline:none;
-                    background-color: rgba(0,0,0,.075);
+                    background-color: $color-white;
                     border-radius: 4px;
+                    color: $color-black;
+                    border: 1.5px solid $color-black;
                   }
                 i {
-                    font-size: 1.4rem;
+                    font-size: 1.2rem;
                     font-weight: 500;
                 }
             }
@@ -771,9 +781,11 @@ body{
         .banner_button{
             cursor: pointer;
             padding: 18px 30px;
-            background-color: $color-white;
+            // background-color: $color-white;
+            background-color: $primary-color;
             font-size: 1rem;
-            color: $tertiary-background-color;
+            // color: $tertiary-background-color;
+            color: $color-white;
             border: none;
             font-weight: 700;
             border-radius: 5px;
