--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -762,7 +762,8 @@ body{
             padding-bottom: 30px;
         .button{
             padding: 15px 30px;
-            background-color: rgba(0, 0, 0, 0.08);
+            // background-color: rgba(0, 0, 0, 0.08);
+            background-color: rgba(255, 255, 255, 0.10);
             font-size: 1rem;
             color: $color-white;
             border: none;
@@ -967,10 +968,10 @@ body{
     }
     .carousel-inner{
         .slider_img{
-            padding-right: 10%;
+            padding-right: 5%;
         }
         h5{
-            margin-top: 16px;
+            margin-top: 30px;
             font-size: 16px;
             color: $primary-color;
             font-weight: 500;
