--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,7 +31,9 @@ $color-black: #000000;
 // v2
 // $card-background-color: #A0FDDC;
 // v3
-$card-background-color: #FFE593;
+// $card-background-color: #FFE593;
+// new one
+$card-background-color: #FFE953;
 
 body{
     overflow-x: hidden !important;
