--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,8 @@ p{
     padding-left: 9%;
     margin-top: 30px;
     padding-top: 0; */
-    border-top: 1px solid #f0f0f0;
-    padding: 30px;
+    /* border-top: 1px solid #f0f0f0; */
+    /* padding: 30px; */
  }
  .navbar{
       box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
