changed all image and video to webp

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,7 +262,7 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 6%;
-  background-image: url("../images/Website-Animation-Final-GIF.gif");
+  background-image: url("../images/Website GIF to WebP.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
