--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -110,7 +110,7 @@ body{
     }
  }
  .fixed {
-background-color: red !important;
+    background-color: red !important;
  }
 
 .nav-up {
@@ -250,7 +250,7 @@ body{
     height: fit-content;
     padding-bottom: 6%;
     // margin-bottom: 6%;
-    background-image: url("../images/Website-Animation-Final-GIF.gif");
+    background-image: url("../images/Website GIF to WebP.webp");
     background-position: center;
     background-repeat: no-repeat;
     // background-size: contain;
